<resources>
    <string name="app_name">Dispatcher</string>
    <string name="server_client_id">691973606282-r3o6af8t6k9c6g2ogrl38ijud7js7fau.apps.googleusercontent.com</string>
    <string name="waiting">Please wait…</string>
    <string name="unable_to_process">Unable to process. Try again</string>
    <string name="session_expired">Session Expired. Please Re-login</string>
    <string name="request_timeout">Request timeout. Try again</string>
    <string name="network_error">No Internet Connection. Try again</string>
    <string name="ok">OK</string>
    <string name="switch_roles">Switch Roles</string>
    <string name="sortation">Sortation</string>
    <string name="dispatch_from_store">Dispatch from Store</string>
    <string name="logout">Logout</string>
    <string name="scan_delivery_label">Scan Delivery Label</string>
    <string name="scan_bin_delivery_label">Scan Bin / Delivery Label</string>
    <string name="scan_bin_number">Scan Bin Number</string>
    <string name="scan_bin">Scan Bin</string>
    <string name="bin_no">Bin No</string>
    <string name="list_of_orders">List of Orders</string>
    <string name="dispatch">Dispatch</string>
    <string name="proceed">Proceed</string>
    <string name="no_of_orders_scanned">No. of Orders Scanned</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="login_failed">Login Failed</string>
    <string name="task_completed">Task Completed Successfully</string>
    <string name="nondispatchable_order">%s Order</string>
    <string name="not_authorized">You are not authorized.</string>
    <string name="cannot_go_back">Cannot Go Back</string>
    <string name="invalid_bin">Invalid Bin</string>
    <string name="view_details">View details</string>
    <string name="cancelled_orders_present">There are Cancelled Orders. Please remove them.</string>
    <string name="todays_tasks">Today\'s Tasks</string>
    <string name="sort_and_bagged">Sort &amp; Bagged</string>
    <string name="sort_and_bag">Sort &amp; Bag</string>
    <string name="dispatched">Dispatched</string>
    <string name="received">Received</string>
    <string name="tasks">Tasks</string>
    <string name="receive_bags">Receive Bags</string>
    <string name="invoice_list">Invoice List</string>
    <string name="close_bag">Close Bag</string>
    <string name="search_by_bag_id">Search by Bag ID</string>
    <string name="bags_label">Bags (%d)</string>
    <string name="scanned_shipments">Scanned Shipments</string>
    <string name="shipments">Shipments (%d)</string>
    <string name="scan_seal_barcode">Scan Seal Barcode</string>
    <string name="complete_task">Complete Task</string>
    <string name="pharmeasy">Pharmeasy</string>
    <string name="scan_shipment">Scan Shipment</string>
    <string name="bin_empty_message">If Bin is Empty, Put Empty Bag inside the bin</string>
    <string name="scan_bin_for_close_bag">Scan Bin for which Bag has to be closed</string>
    <string name="scan_shipment_barcode">Scan Shipment Barcode</string>
    <string name="scan_to_remove_shipments">Scan to Remove Shipments</string>
    <string name="scan_to_remove_bags">Scan to Remove Bags</string>
    <string name="bag_listing">Bag Listing</string>
    <string name="select_destination">Select Destination</string>
    <string name="discard_bag">Discard Bag</string>
    <string name="scan_sealed_successfully">Scan Sealed Successfully</string>
    <string name="scan_label">Scan Label</string>
    <string name="if_vehicle_seal_is_lost">If vehicle seal is lost</string>
    <string name="take_photo">Take Photo</string>
    <string name="scan_vehicle">Scan Vehicle Seal</string>
    <string name="expected">Expected Consignment</string>
    <string name="preview">Preview</string>
    <string name="proof_of_vehicle_seal_loss">Proof of Vehicle Seal Loss</string>
    <string name="pending_review">Pending Review</string>
    <string name="excess_quantity">Excess Quantity</string>
    <string name="scanned_quantity">Scanned Quantity / Shipments</string>
    <string name="mark_as_excess">Mark as Excess</string>
    <string name="complete">Complete</string>
    <string name="add_bags">Add Bags</string>
    <string name="scanned_bags">Scanned Bags</string>
    <string name="scan_bag_barcode">Scan Bag Barcode</string>
    <string name="enter_details">Enter Details</string>
    <string name="driver">Driver</string>
    <string name="vehicle_and_driver_details">Vehicle &amp; Driver Details</string>
    <string name="print_consignment_label">Print Consolidated Invoice</string>
    <string name="print_consignment_label_for">Print Consolidated Invoice for</string>
    <string name="select_driver">Select Driver</string>
    <string name="scan_vehicle_seal">Scan Vehicle Seal</string>
    <string name="search_by_invoice_number">Search by Invoice Number</string>
    <string name="invoices_label">Invoices (%d)</string>
    <string name="trip_listing">Trip Listing</string>
    <string name="no_bags_found">No Bags Found</string>
    <string name="select_reason">Select Reason</string>
    <string name="damaged_barcode">Damaged Barcode</string>
    <string name="bag_not_received">Bag Not Received</string>
    <string name="sort_and_bag_count">%1$d Bags | %2$d Shipments</string>
    <string name="dispatched_count">%1$d Trips</string>
    <string name="received_count">%1$d Bags | %2$d Shipments</string>
    <string name="my_profile">My Profile</string>
    <string name="please_select">Please select valid reason</string>
    <string name="summary">Summary Details</string>
    <string name="summary_With_asset">Summary Details - %1$s</string>
    <string name="no_of_bags_scanned">No. of bags scanned</string>
    <string name="bag_id_and_destination">Bag ID: %1$s | Destination: %2$s</string>
    <string name="bag_destination">Bag Destination : %1$s</string>
    <string name="excess_bag">Excess Bag</string>
    <string name="discard_bag_message">Are you sure you want to discard the bag?</string>
    <string name="discard_dispatch_message">Going back to Home screen will remove scanned Bags from this Trip. Do you want to proceed?</string>
    <string name="received_bags_shipments">Received (%1$d Bags | %2$d Shipments)</string>
    <string name="shipments_label">Shipments</string>
    <string name="bag_id">BAG ID</string>
    <string name="consignment_detail">Consignment Detail</string>
    <string name="received_consignments">Received Consignments</string>
    <string name="dismiss">Dismss</string>
    <string name="yes">Yes</string>
    <string name="audit">Audit</string>
    <string name="begin_audit">Start Audit</string>
    <string name="hi_name">Hi %1$s!</string>
    <string name="start_a_new_audit">You can start a new Audit now</string>
    <string name="scan_bag">Scan Bag / Shipment</string>
    <string name="tems_scanned">Items scanned</string>
    <string name="bags">Bags</string>
    <string name="done">Done</string>
    <string name="complete_audit">Complete Audit</string>
    <string name="scan_bags">Scan Bags</string>
    <string name="extra_bag_s">Extra Bag(s)</string>
    <string name="short_bag_s">Missing Bag(s)</string>
    <string name="extra_shipments">Extra Shipments</string>
    <string name="missing_shipments">Missing Shipments</string>
    <string name="audit_for">Audit for %1$s</string>
    <string name="bag_scanned_count">%1$d / %2$d</string>
    <string name="default_error_message">Smething is not right here</string>
    <string name="audit_complete_title">Complete Audit</string>
    <string name="audit_complete_message">Do you want to End this Audit? You can check Audit Summary from the history in 5 mins</string>
    <string name="cancel">Cancel</string>
    <string name="audit_history">Audit History - %1$s</string>
    <string name="audit_inactive_title">Expired/Inactive Audit</string>
    <string name="audit_inactive_message">The Audit has expired. Please start a new Audit</string>
    <string name="audit_active_title">Audit Active</string>
    <string name="audit_active_message">There is an Active Audit. Please complete the Audit.</string>
    <string name="trip_id">Trip ID:</string>
    <string name="create_trip_title">Create Trip</string>
    <string name="create_trip_message">Do you want to continue with creating the trip with %1$s ?</string>
    <string name="create_bag_title">Create Bag</string>
    <string name="create_bag_message">Do you want to continue with creating the bag with %1$s ?</string>
    <string name="reference_id_label">Ref ID #%1$s</string>
    <string name="package_id_label">Package ID #%1$s</string>
    <string name="lbn_label">LBN #%1$s</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="start_audit">Start Audit?</string>
    <string name="start_audit_confirm">Once Audit is initiated, all other activities will be blocked at the center. Do you want to start Audit?</string>
    <string name="trip_created_with">Trip Created with</string>
    <string name="trip">Trip ID - %1$s</string>
    <string name="dispatched_trip">Dispatched Trip</string>
    <string name="continue_audit">Continue Audit</string>
    <string name="audit_in_progress">Audit is in progress</string>
    <string name="created_time">Created Time : %1$s</string>
    <string name="audit_username">Username : %1$s</string>
    <string name="upload_photo">Upload Screenshot/Images</string>
    <string name="add_photo">Add Photo(s)</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="cc">cc</string>
    <string name="raise_ticket">Raise Ticket</string>
    <string name="submit">Submit</string>
    <string name="comm_error">Not able to select image</string>
    <string name="mercury">https://store.mercuryonline.co/api/support/ticket/create</string>
    <string name="select_capture_image">Please select or capture image</string>
    <string name="ticket_created">Ticket Created</string>
    <string name="details_will_be_reviewed_by_the_concerned_team">Details will be reviewed by the concerned team</string>
    <string name="enter_comma_separated_email_id_s">Enter comma separated email ID’s</string>
    <string name="cc_enter_comma_separated_email_id_s">CC (Enter comma separated email ID’s)</string>
    <string name="last_mile">Last Mile Trips</string>
    <string name="search_delivery_agent">Search Delivery Agent</string>
    <string name="are_you_sure_you_want_to_cancel_the_order">Are you sure you want to cancel the order ?</string>
    <string name="ref_id">Reference Id <b>#6168161900001-BK7G</b></string>
    <string name="yes_cancel">Yes, Cancel</string>
    <string name="no_dont_cancel">No, Don\'t Cancel</string>
    <string name="out_of_service_area">Out of Service Area</string>
    <string name="damaged">Damaged</string>
    <string name="wrong_pincode">Wrong Pincode</string>
    <string name="select_reason_for_cancelling">Select Reason for Cancelling</string>
    <string name="reference_id">Reference Id #%1$s</string>
    <string name="lost">Lost</string>
    <string name="select_reason_for_non_deliverable_shipment">Select reason for Non-Deliverable Shipment</string>
    <string name="out_of_serviceable_area">Out of Serviceable Area</string>
    <string name="enter_the_correct_pincode_for_the_shipment_s_address">Enter the correct pincode for the shipment’s address</string>
    <string name="enter_the_pincode">Enter the pincode</string>
    <string name="serviceable_from_the_existing_dc">The shipment is serviceable from the existing DC as per updated Pincode</string>
    <string name="verify">Verify</string>
    <string name="select_the_boxes_which_are_lost">Select the Boxes which are lost ?</string>
</resources>