<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/select_reason_for_non_deliverable_shipment"
        android:textSize="@dimen/txt_14"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginEnd="@dimen/margin_12"
        android:layout_marginBottom="@dimen/margin_12"
        android:textColor="@color/text_color_blue"
        android:lineSpacingExtra="2sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border_grey"/>

    <TextView
        android:id="@+id/tv_referenceId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reference_id"
        android:fontFamily="@font/open_sans_semi_bold"
        android:textSize="@dimen/txt_14"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_12"
        android:textColor="@color/text_color_blue"
        android:lineSpacingExtra="2sp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_marginBottom="@dimen/margin_12"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginEnd="@dimen/margin_12">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/damaged"
            android:textColor="@color/text_color_blue"
            android:fontFamily="@font/open_sans_regular"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lost"
            android:textColor="@color/text_color_blue"
            android:fontFamily="@font/open_sans_regular"/>

        <RadioButton
            android:id="@+id/rbOutOfServiceableArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out_of_serviceable_area"
            android:textColor="@color/text_color_blue"
            android:fontFamily="@font/open_sans_regular"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong_pincode"
            android:textColor="@color/text_color_blue"
            android:fontFamily="@font/open_sans_regular"/>

    </RadioGroup>

    <TextView
        android:id="@+id/tv_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:fontFamily="@font/open_sans_regular"
        tools:text="@string/reference_id"
        android:textSize="@dimen/txt_14"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/margin_8"
        android:paddingStart="@dimen/margin_12"
        android:paddingEnd="@dimen/margin_12"
        android:paddingBottom="@dimen/margin_8"
        android:background="@drawable/red_background"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_12"
        android:layout_marginBottom="@dimen/margin_12"
        android:textColor="@color/reject_text_color"
        android:lineSpacingExtra="2sp"/>

    <TextView
        android:id="@+id/tv_enter_pincode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/enter_the_correct_pincode_for_the_shipment_s_address"
        android:textSize="@dimen/txt_14"
        android:gravity="center_vertical"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_12"
        android:textColor="@color/text_color_blue"
        android:lineSpacingExtra="2sp"/>

    <LinearLayout
        android:id="@+id/ll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal"
        android:padding="1dp"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_12"
        android:layout_marginBottom="@dimen/margin_12">

        <EditText
            android:id="@+id/ed_pincode"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_38"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:paddingStart="@dimen/margin_20"
            android:paddingEnd="@dimen/margin_20"
            android:textSize="@dimen/txt_14"
            android:maxLength="6"
            android:background="@drawable/border_blue_leftradius"
            android:hint="@string/enter_the_pincode"
            android:fontFamily="@font/open_sans_regular"
           />

        <TextView
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_38"
            android:fontFamily="@font/open_sans_semi_bold"
            android:textSize="@dimen/txt_16"
            android:paddingStart="@dimen/margin_16"
            android:paddingEnd="@dimen/margin_16"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:background="@drawable/border_blue_rightradius"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_pincode_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/serviceable_from_the_existing_dc"
        android:textSize="@dimen/txt_14"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/margin_8"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_16"
        android:paddingBottom="@dimen/margin_8"
        android:background="@drawable/back_green"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_12"
        android:layout_marginBottom="@dimen/margin_12"
        android:textColor="@color/accept_green"
        android:lineSpacingExtra="2sp"/>

    <TextView
        android:id="@+id/labelSelectBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/select_the_boxes_which_are_lost"
        android:textSize="@dimen/txt_14"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginEnd="@dimen/margin_12"
        android:layout_marginBottom="@dimen/margin_12"
        android:textColor="@color/text_color_blue"
        android:visibility="gone"
        android:lineSpacingExtra="2sp"/>

    <include
        android:id="@+id/rvHeader"
        layout="@layout/layout_box_item_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBoxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>
